tests/snapshots/http_requests__traces.snap
---
source: tests/http_requests.rs
expression: traces
---
POST /v2/track HTTP/1.1
host: dc.services.visualstudio.com
content-type: application/json
content-encoding: gzip

[
  {
    "data": {
      "baseData": {
        "duration": "STRIPPED",
        "id": "STRIPPED",
        "name": "async operation",
        "properties": {
          "_MS.links": "[{\"operation_Id\":\"STRIPPED\",\"id\":\"STRIPPED\"}]",
          "service.name": "server",
          "service.namespace": "test"
        },
        "resultCode": "0",
        "type": "InProc",
        "ver": 2
      },
      "baseType": "RemoteDependencyData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.RemoteDependency",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "test.server",
      "ai.operation.id": "STRIPPED"
    },
    "time": "STRIPPED"
  }
]


POST /v2/track HTTP/1.1
host: dc.services.visualstudio.com
content-type: application/json
content-encoding: gzip

[
  {
    "data": {
      "baseData": {
        "duration": "STRIPPED",
        "id": "STRIPPED",
        "name": "GET /hello/world",
        "properties": {
          "client.address": "10.1.2.3",
          "http.request.method": "GET",
          "http.response.status_code": "200",
          "http.route": "/hello/world",
          "network.peer.address": "10.1.2.2",
          "network.protocol.name": "http",
          "network.protocol.version": "1.1",
          "server.address": "example.com",
          "server.port": "8080",
          "service.name": "server",
          "service.namespace": "test",
          "url.path": "/hello/world",
          "url.query": "name=marry",
          "url.scheme": "https",
          "user.id": "marry",
          "user_agent.original": "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:72.0) Gecko/20100101 Firefox/72.0"
        },
        "responseCode": "200",
        "source": "10.1.2.3",
        "success": true,
        "url": "https://example.com:8080/hello/world?name=marry",
        "ver": 2
      },
      "baseType": "RequestData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.Request",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "test.server",
      "ai.operation.id": "STRIPPED",
      "ai.operation.name": "GET /hello/world",
      "ai.operation.parentId": "STRIPPED",
      "ai.user.authUserId": "marry"
    },
    "time": "STRIPPED"
  },
  {
    "data": {
      "baseData": {
        "message": "An event!",
        "properties": {
          "happened": "true",
          "service.name": "server",
          "service.namespace": "test"
        },
        "severityLevel": 2,
        "ver": 2
      },
      "baseType": "MessageData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.Message",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "test.server",
      "ai.operation.id": "STRIPPED",
      "ai.operation.parentId": "STRIPPED"
    },
    "time": "STRIPPED"
  },
  {
    "data": {
      "baseData": {
        "name": "A custom event!",
        "properties": {
          "happened": "true",
          "service.name": "server",
          "service.namespace": "test"
        },
        "ver": 2
      },
      "baseType": "EventData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.Event",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "test.server",
      "ai.operation.id": "STRIPPED",
      "ai.operation.parentId": "STRIPPED"
    },
    "time": "STRIPPED"
  },
  {
    "data": {
      "baseData": {
        "exceptions": [
          {
            "message": "An error",
            "typeName": "<no type>"
          }
        ],
        "properties": {
          "service.name": "server",
          "service.namespace": "test"
        },
        "ver": 2
      },
      "baseType": "ExceptionData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.Exception",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "test.server",
      "ai.operation.id": "STRIPPED",
      "ai.operation.parentId": "STRIPPED"
    },
    "time": "STRIPPED"
  }
]


POST /v2/track HTTP/1.1
host: dc.services.visualstudio.com
content-type: application/json
content-encoding: gzip

[
  {
    "data": {
      "baseData": {
        "data": "https://example.com:8080/hello/world?name=marry",
        "duration": "STRIPPED",
        "id": "STRIPPED",
        "name": "dependency",
        "properties": {
          "device.id": "123",
          "device.model.name": "device",
          "http.request.method": "GET",
          "http.response.status_code": "200",
          "network.peer.address": "10.1.2.4",
          "network.protocol.name": "http",
          "network.protocol.version": "1.1",
          "server.address": "example.com",
          "server.port": "8080",
          "service.name": "client",
          "service.namespace": "test",
          "url.full": "https://example.com:8080/hello/world?name=marry",
          "user.id": "marry"
        },
        "resultCode": "200",
        "target": "example.com:8080",
        "type": "HTTP",
        "ver": 2
      },
      "baseType": "RemoteDependencyData"
    },
    "iKey": "0fdcec70-0ce5-4085-89d9-9ae8ead9af66",
    "name": "Microsoft.ApplicationInsights.RemoteDependency",
    "sampleRate": 100.0,
    "tags": {
      "ai.cloud.role": "test.client",
      "ai.device.id": "123",
      "ai.device.model": "device",
      "ai.operation.id": "STRIPPED",
      "ai.user.authUserId": "marry"
    },
    "time": "STRIPPED"
  }
]
